deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-deployment
  labels:
    app: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
      - name: tasky
        image: ************.dkr.ecr.us-east-2.amazonaws.com/tasky-registry:latest
        ports:
        - containerPort: 8080
