service.yml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
spec:
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
